welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: identifier expected but '=' found.
var x: = 0;var y: = 0; do {avance();x = x + 1; while(estSurBiscuit())
       ^Methods:3: error: identifier expected but '=' found.
var x: = 0;var y: = 0; do {avance();x = x + 1; while(estSurBiscuit())
                  ^Methods:4: error: 'while' expected but 'do' found.
        prendBiscuit()};do {recule();y = y + 1;while(x != y)}
                        ^Methods:5: error: '(' expected but '}' found.
        }
        ^