welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {var x: = 0;var y: = 0; do {avance();x = x + 1; while(estSurBiscuit())
        prendBiscuit()};do {recule();y = y + 1;while(x != y)}
        }

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
